[package]
name = "config_macros"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = "2.0"       # For parsing Rust code
quote = "1.0"     # For generating code
proc-macro2 = "1.0"  # For working with tokens

[dev-dependencies]
config = { path = ".." }
field_hashers = { path = "../../arith/field_hashers" }
gf2 = { path = "../../arith/gf2" }
goldilocks = { path = "../../arith/goldilocks" }
gkr_field_config = { path = "../gkr_field_config" }
mersenne31 = { path = "../../arith/mersenne31/" }
poly_commit = { path = "../../poly_commit" }
transcript = { path = "../../transcript" }
halo2curves.workspace = true

[lib]
proc-macro=true
